--- a/dest/index.html
+++ b/dest/index.html
@@ -16,109 +16,41 @@
 
 <body>
     <section class="stories">
-
-        <div class="story">
-            <div class="story__label">
-                <div class="story__label__text">2 февраля</div>
-            </div>
-            <div class="story__header">
-                Delivery Club: как повысить продажи
-            </div>
-            <div class="story__text">
-                По материалам подкаста «Бизнес-ланч» с Артемом Ишониным — директором Delivery Club
-            </div>
-            <div class="story__subcard">
-                <img src="images/photo_2021-01-25_10-07-41 1.png" class="story__subcard__photo" alt="">
-                <div class="story__subcard__caption">
-                    <div class="story__subcard__header">Артем Ишонин</div>
-                    <div class="story__subcard__text">директор по сопровождению клиентов Delivery Club</div>
-                </div>
-
-                <img src="images/Cube Yellow.G15.shadowless 1.png" class="story__subcard__fig_1">
-                <img src="images/Cube Yellow.G15.shadowless 3.png" class="story__subcard__fig_2">
-                <img src="images/Cube Yellow.G15.shadowless 2.png" class="story__subcard__fig_3">
-
-            </div>
-            <img src="images/Cube Yellow.G15.shadowless 3.png" class="story__fig_2">
-
-        </div>
-        <div class="story">
-            <div class="story__label">
-                <div class="story__label__text">2 февраля</div>
-            </div>
-            <div class="story__header">
-                Delivery Club: как повысить продажи
-            </div>
-            <div class="story__text">
-                По материалам подкаста «Бизнес-ланч» с Артемом Ишониным — директором Delivery Club
-            </div>
-            <div class="story__subcard">
-                <img src="images/photo_2021-01-25_10-07-41 1.png" class="story__subcard__photo" alt="">
-                <div class="story__subcard__caption">
-                    <div class="story__subcard__header">Артем Ишонин</div>
-                    <div class="story__subcard__text">директор по сопровождению клиентов Delivery Club</div>
-                </div>
-
-                <img src="images/Cube Yellow.G15.shadowless 1.png" class="story__subcard__fig_1">
-                <img src="images/Cube Yellow.G15.shadowless 3.png" class="story__subcard__fig_2">
-                <img src="images/Cube Yellow.G15.shadowless 2.png" class="story__subcard__fig_3">
-
-            </div>
-            <img src="images/Cube Yellow.G15.shadowless 3.png" class="story__fig_2">
-
+        <div class="story b7">
+            <div class="story__label">2 февраля</div>
+            <div class="story__header">Delivery Club: как повысить продажи </div>
+            <div class="story__text">По материалам подкаста «Бизнес-ланч» с Артемом Ишониным — директором Delivery Club </div>
         </div>
 
-        <div class="story">
-            <div class="story__label">
-                <div class="story__label__text">2 февраля</div>
-            </div>
-            <div class="story__header">
-                Delivery Club: как повысить продажи
-            </div>
-            <div class="story__text">
-                По материалам подкаста «Бизнес-ланч» с Артемом Ишониным — директором Delivery Club
-            </div>
-            <div class="story__subcard">
-                <img src="images/photo_2021-01-25_10-07-41 1.png" class="story__subcard__photo" alt="">
-                <div class="story__subcard__caption">
-                    <div class="story__subcard__header">Артем Ишонин</div>
-                    <div class="story__subcard__text">директор по сопровождению клиентов Delivery Club</div>
-                </div>
-
-                <img src="images/Cube Yellow.G15.shadowless 1.png" class="story__subcard__fig_1">
-                <img src="images/Cube Yellow.G15.shadowless 3.png" class="story__subcard__fig_2">
-                <img src="images/Cube Yellow.G15.shadowless 2.png" class="story__subcard__fig_3">
-
-            </div>
-            <img src="images/Cube Yellow.G15.shadowless 3.png" class="story__fig_2">
-
+        <div class="story b1">
+            <div class="story__header">Определить участников процесса</div>
+            <div class="story__text">Составьте список тех, кто пользуется вашим продуктом.</div>
+            <a href="#" class="story__link">Скачать чек-лист списка </a>
         </div>
 
-        <div class="story">
-            <div class="story__label">
-                <div class="story__label__text">2 февраля</div>
-            </div>
-            <div class="story__header">
-                Delivery Club: как повысить продажи
-            </div>
-            <div class="story__text">
-                По материалам подкаста «Бизнес-ланч» с Артемом Ишониным — директором Delivery Club
-            </div>
-            <div class="story__subcard">
-                <img src="images/photo_2021-01-25_10-07-41 1.png" class="story__subcard__photo" alt="">
-                <div class="story__subcard__caption">
-                    <div class="story__subcard__header">Артем Ишонин</div>
-                    <div class="story__subcard__text">директор по сопровождению клиентов Delivery Club</div>
-                </div>
-
-                <img src="images/Cube Yellow.G15.shadowless 1.png" class="story__subcard__fig_1">
-                <img src="images/Cube Yellow.G15.shadowless 3.png" class="story__subcard__fig_2">
-                <img src="images/Cube Yellow.G15.shadowless 2.png" class="story__subcard__fig_3">
-
-            </div>
-            <img src="images/Cube Yellow.G15.shadowless 3.png" class="story__fig_2">
-
+        <div class="story b2">
+            <div class="story__header">Нарисовать карты сценариев использования</div>
+            <div class="story__text">Представьте, какой путь проходит каждый участник процесса. Визуализируйте это.</div>
         </div>
+
+        <div class="story b3">
+           <div class="story__header">Найти ошибки в процессах</div>
+            <div class="story__text">Пройдите путь каждого пользователя по точкам, чтобы найти слабые места, которые снижают продажи.</div>
+        </div>
+
+        <div class="story b4">
+            <div class="story__header">Пересмотреть процессы</div>
+            <ul class="story__list"><li>Исправьте ошибки.</li> <li>Пропишите инструкции.</li> <li>Проверьте все еще раз.</li></ul>
+         </div>
+ 
+         <div class="story b5 flex1">             
+            <div class="story__header">Задайте вопрос спикеру</div>
+            <div class="story__form" action="#">
+                <textarea class="story__form__textarea" rows=3 cols=50 placeholder="У меня есть вопрос, могу спросить?"></textarea>
+            </div>
+            <button class="story__form__button" type="submit">Отправить</button>
+            
+         </div>
 
     </section>
 
